--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pocketbase: ^0.7.1
-  riverpod: ^2.1.3
+  flutter_riverpod: ^2.1.3
 
 dev_dependencies:
   flutter_test:
